# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20240408162951_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
